# wikipedia-search-engine

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
tests/: __init__.py  test_app.py  test_main.py
